crates/core/tests/snapshots/integration__backup_dry_run-2.snap
---
source: crates/core/tests/integration.rs
expression: TestSnap(&snap_dry_run)
---
TestSnap {
    files_new: 0,
    files_changed: 0,
    files_unmodified: 73,
    total_files_processed: 73,
    total_bytes_processed: 1125682,
    dirs_new: 0,
    dirs_changed: 0,
    dirs_unmodified: 7,
    total_dirs_processed: 7,
    data_blobs: 0,
    tree_blobs: 0,
    data_added_files: 0,
    data_added_files_packed: 0,
}
