crates/core/tests/snapshots/integration__backup_with_dir_passes-2.snap
---
source: crates/core/tests/integration.rs
expression: TestSummary(&snap2)
---
TestSnap {
    hostname: "",
    paths: StringList(
        [
            "test",
        ],
    ),
    label: "",
    tags: StringList(
        [],
    ),
    files_new: 0,
    files_changed: 0,
    files_unmodified: 73,
    total_files_processed: 73,
    total_bytes_processed: 1125682,
    dirs_new: 0,
    dirs_changed: 0,
    dirs_unmodified: 5,
    total_dirs_processed: 5,
    data_blobs: 0,
    tree_blobs: 0,
    data_added_files: 0,
    data_added_files_packed: 0,
}
